objects/FinServ__RollupByLookupConfig__c.object
<CustomObject>
    <description>Defines rules for calculating rollup summary fields.</description>
    <fields>
        <fullName>FinServ__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FinServ__FromField__c</fullName>
        <label>Field To Roll Up From</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__FromObject__c</fullName>
        <label>From Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__FromRecordType__c</fullName>
        <label>From Record Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__LookupField__c</fullName>
        <label>Lookup Field</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__Namespace__c</fullName>
        <label>Namespace</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Industries</fullName>
                    <default>true</default>
                    <label>Industries</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ProcessType__c</fullName>
        <label>Process Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Realtime</fullName>
                </value>
                <value>
                    <fullName>Async</fullName>
                </value>
                <value>
                    <fullName>Batch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__RollupOperation__c</fullName>
        <label>Rollup Operation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sum</fullName>
                </value>
                <value>
                    <fullName>Max</fullName>
                </value>
                <value>
                    <fullName>Min</fullName>
                </value>
                <value>
                    <fullName>Avg</fullName>
                </value>
                <value>
                    <fullName>Count</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FinServ__ToField__c</fullName>
        <label>Field To Roll Up To</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__ToObject__c</fullName>
        <label>To Object</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__UpdateOnChange__c</fullName>
        <label>Fields Triggering Update</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FinServ__WhereClause__c</fullName>
        <inlineHelpText>A sample expression for the Where Clause is: (1 OR 2) AND 3.
Here the numbers correspond to the filter criterias defined in the child object RollUpByLookupFilterCriteria.</inlineHelpText>
        <label>Where Clause</label>
        <type>TextArea</type>
    </fields>
    <label>Rollup By Lookup Configuration</label>
    <listViews>
        <fullName>FinServ__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Rollup By Lookup Configuration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rollup By Lookup Configurations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>